homework/devops-kubernetes-master/module-5/Homework/task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-rwrt
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /billing(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: billing
            port:
              number: 8080
